--- a/Blazor App Mixed Host Solution/Server/wwwroot/index.html
+++ b/Blazor App Mixed Host Solution/Server/wwwroot/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>Blazor080ServerSideTest</title>
+    <title>$safeprojectname$</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
+
     <app>Loading...</app>
 
     <!-- Uncomment for client Side-->
@@ -16,6 +17,6 @@
 
     <!--Uncomment for server Side-->
     <script src="_framework/components.server.js"></script>
-
+	
 </body>
 </html>
